# The-Iterated-Prisoners-Dilemma

./: CMakeLists.txt  README.md  play.cpp
lib/: CMakeLists.txt
lib/include/: competition.hpp  fun.hpp  helper.hpp  matches.hpp  random_generator.hpp  shakhbat_pd.hpp  strategies.hpp  strategy.hpp  types.hpp
lib/source/: fun.cpp  strategies.cpp
lib/source/competition/: match.cpp
lib/source/strategies/: AlwaysCooperate.cpp  Cooperate.cpp  Cooperator.cpp  Defector.cpp  FirstByDavis.cpp  FirstByDowning.cpp  FirstByFeld.cpp  FirstByGrofman.cpp  FirstByJoss.cpp  FirstByNydegger.cpp  FirstByShubik.cpp  FirstByTullock.cpp  Grudger.cpp  Random.cpp  TitForTat.cpp  strategy.cpp
package/include/: competition.hpp  random_generator.hpp  shakhbat_pd.hpp  strategies.hpp  strategy.hpp
test/: Axelrod.py  CMakeLists.txt  shakhbat_pd_test.cpp  shakhbat_pd_test.hpp
